--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
   "author": "Ranjan Verma",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mongoose": "^8.8.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
