--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
