--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.8.2",
+    "nodemailer": "^6.9.16"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
